--- a/cr7777.html
+++ b/cr7777.html
@@ -16,7 +16,7 @@ th, td {
 
 <table style="width:60%" align = "center">
   <tr>
-    <td><a href= "hw1ritesh.html">Link to Assignment #1</a></td>
+    <td><a href= "https://reddy-ritesh.github.io/Webtech-assignment-1/hw1ritesh.html">Link to Assignment #1</a></td>
       <td></td>
   </tr>
     <tr>
