--- a/cr7777.html
+++ b/cr7777.html
@@ -20,8 +20,8 @@ th, td {
       <td></td>
   </tr>
     <tr>
-    <td><a href= "ScrambleThisName.html">Link to Assignment #2</a></td>
-    <td><a href= "ScrambleThisName.html">Link to Assignment #2 Cloud</a></td>    
+    <td><a href= "https://webtech2-399521.wl.r.appspot.com/">Link to Assignment #2</a></td>
+    <td><a href= "https://webtech2-399521.wl.r.appspot.com/search?keyword=ipad&MaxPrice=100">Link to Assignment #2 Cloud</a></td>    
   </tr>
   <tr>
     <td><a href= "ScrambleThisName.html">Link to Assignment #3</a></td>
