--- a/cr7777.html
+++ b/cr7777.html
@@ -24,8 +24,8 @@ th, td {
     <td><a href= "https://webtech2-399521.wl.r.appspot.com/search?keyword=ipad&MaxPrice=100">Link to Assignment #2 Cloud</a></td>    
   </tr>
   <tr>
-    <td><a href= "ScrambleThisName.html">Link to Assignment #3</a></td>
-    <td><a href= "ScrambleThisName.html">Link to Assignment #3 Cloud</a></td> 
+    <td><a href= "https://ass3-404509.wl.r.appspot.com/">Link to Assignment #3</a></td>
+    <td><a href= "http://api.geonames.org/postalCodeSearchJSON?postalcode_startsWith=9&maxRows=5&country=US&username=reddy.ritesj">Link to Assignment #3 Cloud</a></td> 
   </tr>
   <tr>
      <td></td>
